// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Component > Attributes > Alignment > Stretch > Col 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"stretch-column\\" style=\\"position: absolute; left: 0%; top: 45%; height: 55%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly\\" align=\\"stretch\\">

	![](https://picsum.photos/id/978/150/150)
	![](https://picsum.photos/id/978/150/150)
	</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment > Stretch > Row 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"stretch-row flex-even\\" style=\\"position: absolute; left: 0%; top: 0%; height: 45%; width: 100%; display: flex; flex-direction: row; align-items: center; justify-content: space-evenly\\" align=\\"stretch\\">

	![](https://picsum.photos/id/978/150/150)
	![](https://picsum.photos/id/978/150/150)
	![](https://picsum.photos/id/978/150/150)
	</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 0 50px; box-sizing: border-box; position: absolute; left: 0%; top: 30%; height: 70%; width: 100%; display: flex; flex-direction: row; align-items: center; justify-content: space-evenly\\" align=\\"left\\">

<img src=\\"https://picsum.photos/id/978/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 2`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 0 50px; box-sizing: border-box; position: absolute; left: 0%; top: 30%; height: 70%; width: 100%; display: flex; flex-direction: column; align-items: flex-start; justify-content: space-evenly\\" align=\\"left\\">

<img src=\\"https://picsum.photos/id/978/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 3`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 0 50px; box-sizing: border-box; position: absolute; left: 0%; top: 30%; height: 70%; width: 100%; display: flex; flex-direction: row; align-items: center; justify-content: space-evenly\\" align=\\"right\\">

<img src=\\"https://picsum.photos/id/978/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 4`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 0 50px; box-sizing: border-box; position: absolute; left: 0%; top: 30%; height: 70%; width: 100%; display: flex; flex-direction: column; align-items: flex-end; justify-content: space-evenly\\" align=\\"right\\">

<img src=\\"https://picsum.photos/id/978/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/200\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 5`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: flex-start\\" align=\\"top\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 6`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: row; align-items: flex-start; justify-content: space-evenly\\" align=\\"top\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 7`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: flex-end\\" align=\\"bottom\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 8`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: row; align-items: flex-end; justify-content: space-evenly\\" align=\\"bottom\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 9`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" align=\\"center\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 10`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center\\" align=\\"center\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 11`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-start\\" align=\\"left\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 12`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: row; align-items: flex-start; justify-content: space-evenly\\" align=\\"left\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 13`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-start\\" align=\\"right\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 14`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: row; align-items: flex-start; justify-content: space-evenly\\" align=\\"right\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 15`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: column; align-items: flex-end; justify-content: flex-end\\" align=\\"right\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 16`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: row; align-items: flex-end; justify-content: space-evenly\\" align=\\"right\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 17`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: column; align-items: flex-start; justify-content: flex-end\\" align=\\"left\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Alignment 18`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background flex-even\\" style=\\"background-color: #EEB73F; padding: 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 100%; width: 100%; display: flex; flex-direction: row; align-items: flex-end; justify-content: space-evenly\\" align=\\"left\\">

<img src=\\"https://picsum.photos/id/978/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/996/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
<img src=\\"https://picsum.photos/id/1011/150/150\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Background 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: orange; position: absolute; left: 45%; top: 0%; height: 50%; width: 55%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Make
</div>

<div class=\\"has-dark-background\\" style=\\"background-color: rgb(0,0,0); position: absolute; left: 0%; top: 50%; height: 50%; width: 55%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Noise
</div>

<div class=\\"has-dark-background\\" style=\\"background-color: green; transform: rotate(-15deg); position: absolute; left: 37.5%; top: 40%; height: 20%; width: 25%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### some
</div>
</div>"
`;

exports[`Grid Component > Attributes > Border 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"\\" style=\\"border: thick dotted blue; box-sizing: border-box; position: absolute; left: 0%; top: 37.5%; height: 25%; width: 30%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

thick dotted blue
</div>

<div class=\\"\\" style=\\"border: 4px solid white; box-sizing: border-box; position: absolute; left: 35%; top: 37.5%; height: 25%; width: 30%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

20px solid white
</div>

<div class=\\"\\" style=\\"border: medium dashed red; box-sizing: border-box; position: absolute; left: 70%; top: 37.5%; height: 25%; width: 30%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

thick dotted blue
</div>
</div>"
`;

exports[`Grid Component > Attributes > Filter 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-dark-background\\" style=\\"background-color: #B565A7; filter: blur(10px); position: absolute; left: 5%; top: 15%; height: 25%; width: 30%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

Text is too blurry
</div>

<div class=\\"has-light-background\\" style=\\"background-color: white; filter: grayscale(); position: absolute; left: 38%; top: 25%; height: 50%; width: 50%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

<img src=\\"/documentation/Image.jpg\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Padding 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-light-background\\" style=\\"background-color: orange; padding: 0 50px; box-sizing: border-box; position: absolute; left: 0%; top: 0%; height: 50%; width: 50%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

###### Lorem Ipsum wasnt simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book here there
</div>

<div class=\\"has-light-background\\" style=\\"background-color: orange; padding: 20px; box-sizing: border-box; position: absolute; left: 50%; top: 50%; height: 50%; width: 50%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

<img src=\\"/documentation/Image.jpg\\" alt=\\"\\" style=\\"width: 800px; object-fit: fill\\">
</div>
</div>"
`;

exports[`Grid Component > Attributes > Padding 2`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-dark-background\\" style=\\"background-color: red; position: absolute; left: 5%; top: 10%; height: 55%; width: 60%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Fragments:
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"1\\" -->Right
- &shy;<!-- .element: class=\\"fragment\\" data-fragment-index=\\"2\\" -->Bottom
</div>

<div class=\\"has-dark-background fragment\\" style=\\"background-color: green; position: absolute; left: 70%; top: 10%; height: 55%; width: 25%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" data-fragment-index=\\"1\\">

Right Grid
</div>

<div class=\\"has-light-background fragment\\" style=\\"background-color: gray; position: absolute; left: 5%; top: 70%; height: 20%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" data-fragment-index=\\"2\\">

Bottom Grid
</div>
</div>"
`;

exports[`Grid Component > Attributes > Rotate 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"has-dark-background\\" style=\\"background-color: #B565A7; transform: rotate(-10deg); position: absolute; left: 35%; top: 0%; height: 25%; width: 30%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

Hello
</div>

<div class=\\"has-dark-background\\" style=\\"background-color: #D65076; transform: rotate(40deg); position: absolute; left: 60%; top: 75%; height: 25%; width: 40%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

World!
</div>
</div>"
`;

exports[`Grid Component > Basic Syntax 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 5%; top: 10%; height: 55%; width: 60%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Left
</div>

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 70%; top: 10%; height: 55%; width: 25%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Right
</div>

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 5%; top: 70%; height: 20%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Bottom
</div>
</div>"
`;

exports[`Grid Component > Basic Syntax 2`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 5%; top: 10%; height: 55%; width: 60%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Left
</div>

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 70%; top: 10%; height: 55%; width: 25%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Right
</div>

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 5%; top: 70%; height: 20%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Bottom
</div>
</div>"
`;

exports[`Grid Component > Column Flow 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 30%; top: 0%; height: 100%; width: 40%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Lorem
<img src=\\"/documentation/Image.jpg\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
### Ipsum
</div>
</div>"
`;

exports[`Grid Component > Position Coordinates 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"\\" style=\\"background-color: orange; position: absolute; left: 10%; top: 15%; height: 50%; width: 40%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Positive X, Y
</div>

<div class=\\"\\" style=\\"background-color: red; position: absolute; left: 30%; top: 40%; height: 30%; width: 30%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Negative X, Positive Y
</div>

<div class=\\"\\" style=\\"background-color: blue; position: absolute; left: 55%; top: 40%; height: 40%; width: 40%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Negative X, Y
</div>

<div class=\\"\\" style=\\"background-color: green; position: absolute; left: 0%; top: 85%; height: 10%; width: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Positive X, Negative Y
</div>
</div>"
`;

exports[`Grid Component > Position by Name 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"\\" style=\\"background-color: red; position: absolute; left: 0%; top: 0%; height: 30%; width: 40%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Top Left
</div>

<div class=\\"\\" style=\\"background-color: green; position: absolute; left: 50%; top: 0%; height: 100%; width: 50%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Right Default Size
</div>

<div class=\\"\\" style=\\"background-color: coral; position: absolute; left: 10%; top: 70%; height: 30%; width: 80%; display: flex; flex-direction: column; align-items: center; justify-content: center\\" >

### Bottom
</div>
</div>"
`;

exports[`Grid Component > Row Flow 1`] = `
"<!-- .slide: class=\\"drop\\" -->
<div class=\\"\\" style=\\"position: absolute; left: 0px; top: 0px; height: 700px; width: 960px; min-height: 700px; display: flex; flex-direction: column; align-items: center; justify-content: center\\" absolute=\\"true\\">

<div class=\\"flex-even\\" style=\\"background-color: coral; position: absolute; left: 0%; top: 30%; height: 40%; width: 100%; display: flex; flex-direction: row; align-items: center; justify-content: center\\" >

### Lorem
<img src=\\"/documentation/Image.jpg\\" alt=\\"\\" style=\\"object-fit: scale-down\\">
### Ipsum
</div>
</div>"
`;
